Refactor New Team Base Package Name -> com.grayraccoon, and extra changes Added sample Get User method testing new WebUtils

--- a/HystrixDashboardSample/src/main/resources/application.yml
+++ b/HystrixDashboardSample/src/main/resources/application.yml
@@ -21,10 +21,10 @@ management:
 
 turbine:
   aggregator:
-    clusterConfig: OP-USERS-SAMPLE
-  app-config: op-users-sample
+    clusterConfig: USERS-MS-SAMPLE
+  app-config: users-ms-sample
   instanceUrlSuffix:
-    OP-USERS-SAMPLE: /op-users-sample/actuator/hystrix.stream
+    USERS-MS-SAMPLE: /users-ms-sample/actuator/hystrix.stream
   combine-host-port: true
 
 
