--- a/HystrixDashboardSample/src/main/resources/bootstrap.yml
+++ b/HystrixDashboardSample/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: users-ms-sample
+    name: HystrixDashboard
   cloud:
     config:
       enabled: true
-      name: users-ms-sample
+      name: HystrixDashboard
       uri: http://localhost:8888
