Enabled default log file, all projects.

--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -15,3 +15,5 @@ spring:
           skip-ssl-validation: true
           timeout: 6
 
+logging:
+  file: ${java.io.tmpdir}/logs/${spring.application.name}.log
