--- a/SpringAdminServer/src/main/resources/bootstrap.yml
+++ b/SpringAdminServer/src/main/resources/bootstrap.yml
@@ -6,3 +6,5 @@ spring:
       enabled: true
       name: SpringAdminServer
       uri: http://localhost:8888
+logging:
+  file: ${java.io.tmpdir}/logs/${spring.application.name}.log
