[Auth-Ms] Finished the sample configuartion for ELK Stack in docker, completed the logback configuration for auth-ms This sample is working and can see the logs inside Kibana, next step, add configuration to the rest of the Services.

--- a/DockerServices/conf/logstash_pipelines/main_pipeline.conf
+++ b/DockerServices/conf/logstash_pipelines/main_pipeline.conf
@@ -16,7 +16,7 @@ input{
 
 output {
     elasticsearch {
-        hosts => ["ElasticSearchServer"]
+        hosts => ["elasticsearchserver"]
         index => "micro-%{serviceName}"
     }
 }
