[Auth-Ms] ELK via RabbitMQ

--- a/DockerServices/conf/logstash_pipelines/main_pipeline.conf
+++ b/DockerServices/conf/logstash_pipelines/main_pipeline.conf
@@ -6,6 +6,22 @@ input{
         port => 5000
         codec => "json"
     }
+
+    rabbitmq {
+        id => "rabbitmq_logging_input"
+        host => "RabbitMQ-Server"
+        user => "guest"
+        password => "guest"
+        port => 5672
+        durable => true
+        codec => "json"
+
+        key => "*.logging.*"
+        queue => "*.logging.*"
+        exchange => "logging_queue"
+        exchange_type => "topic"
+    }
+
 }
 
 # The filter part of this file is commented out to indicate that it is
