--- a/AccountsMs/src/main/resources/bootstrap.yml
+++ b/AccountsMs/src/main/resources/bootstrap.yml
@@ -7,4 +7,5 @@ spring:
       name: accounts-ms
       uri: http://localhost:8888
 logging:
+  config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.active:default}/master/logback-spring.xml
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
