--- a/ZuulProxy/src/main/resources/bootstrap.yml
+++ b/ZuulProxy/src/main/resources/bootstrap.yml
@@ -1,10 +1,11 @@
 spring:
   application:
-    name: ZuulProxy
+    name: Zuul-Proxy
   cloud:
     config:
       enabled: true
       name: ZuulProxy
       uri: http://localhost:8888
 logging:
+  config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.active:default}/master/logback-spring.xml
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
