--- a/ui-gateway/src/main/resources/bootstrap.yml
+++ b/ui-gateway/src/main/resources/bootstrap.yml
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: zuul-ui-proxy
+    name: ui-gateway
   cloud:
     config:
       enabled: true
-      name: ZuulUiProxy
+      name: UiGateway
       uri: http://localhost:8888
 logging:
   config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.active:default}/master/logback-spring.xml
