--- a/SpringAdminServer/pom.xml
+++ b/SpringAdminServer/pom.xml
@@ -37,6 +37,15 @@
 			<version>2.1.2.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
