--- a/AccountsMs/src/main/resources/bootstrap.yml
+++ b/AccountsMs/src/main/resources/bootstrap.yml
@@ -1,3 +1,8 @@
+#Configuration Server should overwrite this properties.
+eureka.client.enabled: false
+spring.cloud.config.enabled: false
+---
+spring.profiles: dev,qa,perf,prod
 spring:
   application:
     name: accounts-ms
