--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Web-Utils"]
 	path = Web-Utils
-	url = ../../herychemo/Web-Utils.git
+	url = ../Web-Utils.git
 [submodule "SampleConfigRepo"]
 	path = SampleConfigRepo
-	url = ../../herychemo/SampleConfigRepo.git
+	url = ../SampleConfigRepo.git
