--- a/EurekaServer/src/main/resources/bootstrap.yml
+++ b/EurekaServer/src/main/resources/bootstrap.yml
@@ -9,6 +9,6 @@ spring:
     config:
       enabled: true
       name: EurekaServer
-      uri: http://localhost:8888
+      uri: ${CONFIG_SERVER:http://localhost:8888}
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
