--- a/AuthMs/src/main/resources/bootstrap.yml
+++ b/AuthMs/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@
 eureka.client.enabled: false
 spring.cloud.config.enabled: false
 ---
-spring.profiles: dev,qa,perf,prod
+spring.profiles: local,dockercli,dev,qa,perf,prod
 spring:
   application:
     name: auth-ms
