--- a/SpringAdminServer/src/main/resources/bootstrap.yml
+++ b/SpringAdminServer/src/main/resources/bootstrap.yml
@@ -13,3 +13,6 @@ spring:
       uri: ${CONFIG_SERVER:http://localhost:8888}
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
+---
+spring.profiles: dockercli
+spring.cloud.config.uri: http://ConfigServer:8888
