--- a/ZuulApiProxy/src/main/resources/bootstrap.yml
+++ b/ZuulApiProxy/src/main/resources/bootstrap.yml
@@ -14,3 +14,6 @@ spring:
 logging:
   config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.active:default}/master/logback-spring.xml
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
+---
+spring.profiles: dockercli
+spring.cloud.config.uri: http://ConfigServer:8888
