Starting support for swarm profile (for testing on docker stack )

--- a/DockerServices/conf/logstash_pipelines/main_pipeline.conf
+++ b/DockerServices/conf/logstash_pipelines/main_pipeline.conf
@@ -9,10 +9,10 @@ input{
 
     rabbitmq {
         id => "rabbitmq_logging_input"
-        host => "RabbitMQ-Server"
-        user => "guest"
-        password => "guest"
-        port => 5672
+        host => "${RABBIT_MQ_HOST:rabbit_server}"
+        user => "${RABBIT_MQ_USER:guest}"
+        password => "${RABBIT_MQ_PASS:guest}"
+        port => "${RABBIT_MQ_PORT:5672}"
         durable => true
         codec => "json"
 
@@ -32,7 +32,7 @@ input{
 
 output {
     elasticsearch {
-        hosts => ["elasticsearchserver"]
+        hosts => ["${ELASTICSEARCH_HOST:elasticsearch}"]
         index => "micro-%{serviceName}"
     }
 }
