--- a/DockerServices/conf/kibana.yml
+++ b/DockerServices/conf/kibana.yml
@@ -1,8 +1,8 @@
 #eg. https://github.com/elastic/kibana/blob/master/config/kibana.yml
 
 # The URLs of the Elasticsearch instances to use for all your queries.
-elasticsearch.hosts: ["http://elasticsearchserver:9200"]
-elasticsearch.url: "http://elasticsearchserver:9200"
+#elasticsearch.hosts: ["http://elasticsearchserver:9200"]
+#elasticsearch.url: "http://elasticsearchserver:9200"
 
 # The Kibana server's name.  This is used for display purposes.
 server.name: "Kibana-Server"
