--- a/EurekaServer/src/main/resources/bootstrap.yml
+++ b/EurekaServer/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 #Configuration Server should overwrite this properties.
 spring.cloud.config.enabled: false
 ---
-spring.profiles: local,dockercli,dev,qa,perf,prod
+spring.profiles: local,dockercli,swarm,dev,qa,perf,prod
 spring:
   application:
     name: eureka-server
@@ -15,3 +15,6 @@ logging:
 ---
 spring.profiles: dockercli
 spring.cloud.config.uri: http://ConfigServer:8888
+---
+spring.profiles: swarm
+spring.cloud.config.uri: http://tasks.ConfigServer:8888
