--- a/SpringAdminServer/src/main/resources/bootstrap.yml
+++ b/SpringAdminServer/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@
 eureka.client.enabled: false
 spring.cloud.config.enabled: false
 ---
-spring.profiles: local,dockercli,dev,qa,perf,prod
+spring.profiles: local,dockercli,swarm,dev,qa,perf,prod
 spring:
   application:
     name: spring-admin-server
@@ -16,3 +16,6 @@ logging:
 ---
 spring.profiles: dockercli
 spring.cloud.config.uri: http://ConfigServer:8888
+---
+spring.profiles: swarm
+spring.cloud.config.uri: http://tasks.ConfigServer:8888
