--- a/turbine-server/src/main/resources/bootstrap.yml
+++ b/turbine-server/src/main/resources/bootstrap.yml
@@ -1,3 +1,8 @@
+#Configuration Server should overwrite this properties.
+eureka.client.enabled: false
+spring.cloud.config.enabled: false
+---
+spring.profiles: local,dockercli,swarm,dev,qa,perf,prod
 spring:
   application:
     name: turbine-server
