added extra env var to kibana config on docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     hostname: kibanaserver
     environment:
       - ELASTICSEARCH_URL=http://tasks.elasticsearchserver:9200
+      - ELASTICSEARCH_HOSTS=http://tasks.elasticsearchserver:9200
     ports:
       - 5601:5601
     volumes:
