--- a/ui-gateway/pom.xml
+++ b/ui-gateway/pom.xml
@@ -19,7 +19,7 @@
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 
         <dockerfile-maven-version>1.4.10</dockerfile-maven-version>
-        <docker-repository>herychemo</docker-repository>
+        <docker-repository>grayraccoon</docker-repository>
         <docker-image-name>sample-cloud-ui-gateway</docker-image-name>
     </properties>
 
