--- a/AccountsMs/pom.xml
+++ b/AccountsMs/pom.xml
@@ -79,6 +79,13 @@
 
 
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.grayraccoon.sample</groupId>
 			<artifactId>accounts-domain</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
