small update on gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,4 +44,5 @@ Package-And-Push:
     - docker login -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - mvn $MAVEN_CLI_OPTS package -DskipTests
     - chmod +x ./push_services.sh && ./push_services.sh
-    - docker rmi $(docker images -qa -f 'dangling=true')
+    #- docker rmi $(docker images -qa -f 'dangling=true')
+    - echo "Done!"
